# RustGuard

./: .gitignore  Dockerfile  FUTURE_IMPROVEMENTS.md  LICENSE.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  release.yml  version-tag.yml
app/: Cargo.toml  build.rs  tauri.conf.json
app/src/: main.rs
app/ui/: index.html  main.js  styles.css
app/ui/js/: dom.js  logs.js  navigation.js  settings.js  state.js  tauri.js  tunnels.js  utils.js
docs/: index.html  style.css
scripts/: build_linux.sh  build_release.sh  build_windows.ps1  build_windows.sh
website/assets/: site.webmanifest
