[package]
name = "rustguard"
version = "0.0.0"
edition = "2021"
authors = ["WebSVC"]
description = "RustGuard is a Rust-powered graphical client for managing and securing WireGuard VPN connections with performance, safety, and simplicity."
license = "MIT"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
rfd = "0.15.4"
auto-launch = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"

[dev-dependencies]
tempfile = "3.23.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
